--- a/Titanik.ipynb
+++ b/Titanik.ipynb
@@ -38,8 +38,8 @@
    },
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv('kaggle datasets/titanik/train.csv')\n",
-    "test_data = pd.read_csv(\"kaggle datasets/titanik/test.csv\")"
+    "train_data = pd.read_csv('titanik/train.csv')\n",
+    "test_data = pd.read_csv(\"titanik/test.csv\")"
    ]
   },
   {
