--- a/Titanik.ipynb
+++ b/Titanik.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -33,21 +31,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data = pd.read_csv('titanik/train.csv')\n",
-    "test_data = pd.read_csv(\"titanik/test.csv\")"
+    "test_data = pd.read_csv('titanik/test.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "passengers = train_data.drop('Survived', axis=1)\n",
@@ -335,9 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -371,9 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -407,9 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -437,9 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -477,9 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "passengers_num = pd.get_dummies(passengers[['Age', 'SibSp', 'Parch', 'Fare']])"
@@ -488,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -514,9 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -536,9 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -572,9 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
@@ -597,9 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class MostFrequentImputer(BaseEstimator, TransformerMixin):\n",
@@ -612,6 +586,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SibSp_ix, Parch_ix = 1, 2\n",
+    "\n",
+    "class AttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "#    def __init__(self, delet=True):\n",
+    "#        self.delet = delet\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X):\n",
+    "        SnP = X[:, SibSp_ix] + X[:, Parch_ix]\n",
+    "        return np.c_[X, SnP]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FeatureSelection(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, features):\n",
+    "        self.features = features\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X):\n",
+    "        return X[:, self.features]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -620,10 +627,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
@@ -633,10 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_attribs = list(passengers_num)\n",
@@ -645,10 +648,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -659,7 +660,7 @@
        "Name: Embarked, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,29 +671,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "G6             4\n",
-       "B96 B98        4\n",
        "C23 C25 C27    4\n",
+       "B96 B98        4\n",
+       "G6             4\n",
        "F2             3\n",
        "D              3\n",
        "              ..\n",
-       "E68            1\n",
-       "D28            1\n",
+       "A31            1\n",
+       "E49            1\n",
+       "D49            1\n",
        "C46            1\n",
-       "D19            1\n",
-       "D7             1\n",
+       "B39            1\n",
        "Name: Cabin, Length: 147, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,37 +702,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_pipeline = Pipeline([\n",
-    "    ('imputer', SimpleImputer(strategy='median'))\n",
+    "    ('imputer', SimpleImputer(strategy='median')),\n",
+    "    ('attr_adder', AttributesAdder())\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[22.    ,  1.    ,  0.    ,  7.25  ],\n",
-       "       [38.    ,  1.    ,  0.    , 71.2833],\n",
-       "       [26.    ,  0.    ,  0.    ,  7.925 ],\n",
+       "array([[22.    ,  1.    ,  0.    ,  7.25  ,  1.    ],\n",
+       "       [38.    ,  1.    ,  0.    , 71.2833,  1.    ],\n",
+       "       [26.    ,  0.    ,  0.    ,  7.925 ,  0.    ],\n",
        "       ...,\n",
-       "       [28.    ,  1.    ,  2.    , 23.45  ],\n",
-       "       [26.    ,  0.    ,  0.    , 30.    ],\n",
-       "       [32.    ,  0.    ,  0.    ,  7.75  ]])"
+       "       [28.    ,  1.    ,  2.    , 23.45  ,  3.    ],\n",
+       "       [26.    ,  0.    ,  0.    , 30.    ,  0.    ],\n",
+       "       [32.    ,  0.    ,  0.    ,  7.75  ,  0.    ]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,10 +742,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
     "cat_pipeline = Pipeline([\n",
@@ -758,43 +754,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "testing = cat_pipeline.fit_transform(train_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 0., 0., ..., 0., 0., 1.])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "testing = cat_pipeline.fit_transform(train_data)\n",
     "testing[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.compose import ColumnTransformer\n",
@@ -807,19 +778,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = np.array([0,3,4,5,6,7,8,9,10,11,12])\n",
+    "\n",
+    "prepare_selection = Pipeline([\n",
+    "    ('preparation', full_pipeline),\n",
+    "    ('selection', FeatureSelection(features))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([22.  ,  1.  ,  0.  ,  7.25,  0.  ,  1.  ,  0.  ,  0.  ,  1.  ,\n",
-       "        0.  ,  0.  ,  1.  ])"
+       "array([22.  ,  1.  ,  0.  ,  7.25,  1.  ,  0.  ,  1.  ,  0.  ,  0.  ,\n",
+       "        1.  ,  0.  ,  0.  ,  1.  ])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,10 +816,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22.  ,  7.25,  1.  ,  0.  ,  1.  ,  0.  ,  0.  ,  1.  ,  0.  ,\n",
+       "        0.  ,  1.  ])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = prepare_selection.fit_transform(passengers)\n",
+    "X_train[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_train = train_data['Survived']"
@@ -849,19 +854,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 84,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.75555556, 0.78651685, 0.75280899, 0.84269663, 0.87640449,\n",
-       "       0.83146067, 0.80898876, 0.76404494, 0.85393258, 0.85393258])"
+       "array([0.71111111, 0.82022472, 0.75280899, 0.80898876, 0.88764045,\n",
+       "       0.82022472, 0.82022472, 0.75280899, 0.83146067, 0.84269663])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,24 +873,24 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "model_rfc = RandomForestClassifier(random_state=42, n_estimators=100)\n",
+    "model_rfc = RandomForestClassifier(random_state=42, n_estimators=120)\n",
     "model_rfc.fit(X_train, y_train)\n",
-    "forest_scores = cross_val_score(my_model, X_train, y_train, cv=10)\n",
+    "forest_scores = cross_val_score(model_rfc, X_train, y_train, cv=10)\n",
     "forest_scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8126342072409489"
+       "0.8048189762796504"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,9 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4448,9 +4449,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4469,41 +4468,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 87,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.77777778, 0.79775281, 0.76404494, 0.82022472, 0.79775281,\n",
-       "       0.7752809 , 0.78651685, 0.78651685, 0.83146067, 0.85393258])"
+       "array([0.77777778, 0.78651685, 0.76404494, 0.84269663, 0.79775281,\n",
+       "       0.7752809 , 0.79775281, 0.79775281, 0.80898876, 0.83146067])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lrs_model = rnd_search.best_estimator_\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "#lrs_model = rnd_search.best_estimator_\n",
+    "lrs_model = LogisticRegression(random_state=42, max_iter=1000, C=1400)\n",
+    "lrs_model.fit(X_train, y_train)\n",
     "lrs_scores = cross_val_score(lrs_model, X_train, y_train, cv=10)\n",
     "lrs_scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7991260923845193"
+       "0.7980024968789012"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4521,37 +4522,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 92,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = full_pipeline.transform(test_data)"
+    "X_test = prepare_selection.transform(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 93,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "final_model = model_rfc\n",
+    "final_model = lrs_model\n",
     "predictions = final_model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 94,
+   "metadata": {},
    "outputs": [],
    "source": [
     "output = pd.DataFrame({'PassengerId': test_data.PassengerId, 'Survived': predictions})\n",
-    "output.to_csv('my_submission.csv', index=False)"
+    "output.to_csv(r'C:\\Users\\roman\\Documents\\Учеба\\projects\\kaggle\\titanik\\my_submission2.csv', index=False)"
    ]
   }
  ],
